--- a/.github/workflows/dotnet-build.yml
+++ b/.github/workflows/dotnet-build.yml
@@ -31,8 +31,14 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore ./src/WeatherFunction.csproj
 
+    - name: Restore test dependencies
+      run: dotnet restore ./tests/WeatherFunction.Tests.csproj
+
     - name: Build
       run: dotnet build ./src/WeatherFunction.csproj --configuration ${{ env.BUILD_CONFIGURATION }} --no-restore /p:BUILD_SOURCEVERSION=${{ github.sha }}
+
+    - name: Build tests
+      run: dotnet build ./tests/WeatherFunction.Tests.csproj --configuration ${{ env.BUILD_CONFIGURATION }} --no-restore
 
     - name: Test
       run: dotnet test ./tests/WeatherFunction.Tests.csproj --configuration ${{ env.BUILD_CONFIGURATION }} --no-build --verbosity normal --collect:"XPlat Code Coverage" --results-directory ./coverage
